--- a/OneDrive/Desktop/chai aur backend/package.json
+++ b/OneDrive/Desktop/chai aur backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chai-aur-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +13,8 @@
   ],
   "author": "malaika",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
